--- a/proto/activity/BUILD
+++ b/proto/activity/BUILD
@@ -18,8 +18,8 @@ proto_library(
     srcs = ["activity.proto"],                                                                   
     deps = [
 			":earning_activity_proto",
-			":reorg_activity_proto",
 			":trading_activity_proto",
+			":daily_stock_activity_proto",
 		]
 )
 
@@ -40,17 +40,6 @@ cc_proto_library(
 )                                                                                                   
                                                                                                     
 proto_library(                                                                                      
-    name = "reorg_activity_proto",                                                                     
-    srcs = ["reorg_activity.proto"],                                                                   
-    deps = [":activity_timestamp_proto"]
-)                                                                                                   
-                                                                                                    
-cc_proto_library(                                                                                   
-    name = "reorg_activity_cc_proto",                                                                  
-    deps = [":earning_activity_proto"],                                                                  
-)                                                                                                   
-                                                                                                    
-proto_library(                                                                                      
     name = "trading_activity_proto",                                                                     
     srcs = ["trading_activity.proto"],                                                                   
     deps = [
@@ -63,3 +52,14 @@ cc_proto_library(
     name = "trading_activity_cc_proto",                                                                  
     deps = [":earning_activity_proto"],                                                                  
 )                                                                                                   
+
+proto_library(                                                                                      
+    name = "daily_stock_activity_proto",                                                                     
+    srcs = ["daily_stock_activity.proto"],                                                                   
+    deps = [":activity_timestamp_proto"]
+)                                                                                                   
+                                                                                                    
+cc_proto_library(                                                                                   
+    name = "daily_stock_activity_cc_proto",                                                                  
+    deps = [":daily_stock_activity_proto"],                                                                  
+)
