--- a/data/example/BUILD
+++ b/data/example/BUILD
@@ -18,7 +18,7 @@ py_binary(
     name = "example_generator_test",                                                               
     srcs = ["example_generator_test.py"],                                                          
     args = [                                                                                        
-      "/Users/longchb/Documents/GitHub/macaron/data/store/alpha_advantage/timeline/2020-10-16/AMD.proto /Users/longchb/Documents/GitHub/macaron/data/store/alpha_advantage/example"
+      "../store/alpha_advantage/timeline/2020-10-16/AMD.proto ../store/alpha_advantage/example"
     ],     
     deps = [                                                                                        
       ":example_generator",                                                        
